--- a/ios/build.gradle
+++ b/ios/build.gradle
@@ -4,7 +4,7 @@ sourceCompatibility = '1.7'
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
 ext {
-	mainClassName = "mx.e5.madmom.IOSLauncher"
+	mainClassName = "IOSLauncher"
 }
 
 launchIPhoneSimulator.dependsOn build
